--- a/assets/styles.css
+++ b/assets/styles.css
@@ -3,6 +3,7 @@ body {
     line-height: 1.6;
     margin: 0;
     padding: 0;
+    background-color: #f4f4f4;
 }
 
 header {
@@ -32,7 +33,7 @@ nav ul li a {
 }
 
 main {
-    padding: 1rem;
+    padding: 2rem;
 }
 
 footer {
@@ -40,7 +41,37 @@ footer {
     color: #fff;
     text-align: center;
     padding: 1rem 0;
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
+}
+
+.container {
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0 2rem;
+}
+
+#publications-list {
+    list-style-type: none;
+    padding: 0;
+}
+
+#publications-list li {
+    background: #fff;
+    margin: 1rem 0;
+    padding: 1rem;
+    border-left: 4px solid #333;
+}
+
+h2 {
+    color: #333;
+}
+
+img.profile {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    margin: 1rem auto;
+    display: block;
 }
